# daur

./: .gitignore  Cargo.toml  Justfile  README.md  clippy.toml  todo.txt
daur-lib/: Cargo.toml
daur-lib/src/: arc_cell.rs  cell.rs  changing.rs  chroma.rs  clone_cell.rs  context.rs  holdable.rs  holdable_object.rs  id.rs  interval.rs  key.rs  keyboard.rs  lib.rs  lock.rs  note.rs  notes.rs  observed.rs  piano_roll.rs  pitch.rs  receiver.rs  select.rs  selection.rs  spaced.rs  string.rs  test.rs
daur-lib/src/app/: action.rs  actions.rs  audio.rs  control.rs  draw.rs  events.rs  holdable.rs  holdable_object.rs  macros.rs  mod.rs  selection.rs  settings.rs  view.rs  window.rs
daur-lib/src/audio/: config.rs  fixed_length.rs  import.rs  interleaved_samples.rs  mod.rs  non_empty.rs  pair.rs  player.rs  resample.rs  sample.rs  sample_instant.rs  sample_rate.rs  source.rs  subsection.rs
daur-lib/src/audio/sample/: duration.rs  instant.rs  mod.rs  pair.rs  period.rs  rate.rs
daur-lib/src/cell/: arc.rs  atomic.rs  clone.rs  mod.rs  option.rs  weak.rs
daur-lib/src/clip/: content.rs  mod.rs  overview.rs  settings.rs  source.rs
daur-lib/src/extension/: guard.rs  mod.rs  option.rs
daur-lib/src/holdable/: mod.rs  window_size.rs
daur-lib/src/length/: mod.rs  point.rs  size.rs
daur-lib/src/measure/: mod.rs  offset.rs  point.rs  rectangle.rs  size.rs
daur-lib/src/measure/length/: mod.rs  non_zero.rs
daur-lib/src/metre/: bar.rs  changing.rs  measure.rs  mod.rs  offset_mapping.rs  pitch_spaced.rs  signature.rs  spaced.rs  time_context.rs  time_signature.rs
daur-lib/src/metre/duration/: mod.rs  non_zero.rs  ops.rs
daur-lib/src/metre/instant/: mod.rs  non_zero.rs  ops.rs
daur-lib/src/metre/period/: mod.rs  non_zero.rs
daur-lib/src/metre/relative/: instant.rs  mod.rs
daur-lib/src/musical_time/: bar.rs  changing.rs  mapping.rs  mod.rs  pitch_spaced.rs  signature.rs  spaced.rs  tempo.rs
daur-lib/src/musical_time/duration/: non_zero.rs
daur-lib/src/musical_time/instant/: mod.rs  non_zero.rs
daur-lib/src/musical_time/period/: mod.rs  non_zero.rs
daur-lib/src/node/: mod.rs  process_result.rs
daur-lib/src/node/chain/: instance.rs  mod.rs
daur-lib/src/note/: chroma.rs  event.rs  group.rs  id.rs  interval.rs  key.rs  key_interval.rs  mod.rs  pitch.rs  sign.rs
daur-lib/src/note/event/: mod.rs  sequence.rs  subsequence.rs
daur-lib/src/notes/: chroma.rs  key.rs  key_interval.rs  mod.rs  note.rs  pitch.rs  sign.rs
daur-lib/src/notes/piano_roll/: mod.rs
daur-lib/src/piano_roll/: key.rs  mod.rs  row.rs  settings.rs
daur-lib/src/popup/: button_panel.rs  error.rs  error_message.rs  explorer.rs  file_selector.rs  id.rs  info.rs  instance.rs  key.rs  key_selector.rs  manager.rs  mod.rs  panel.rs  popups.rs  specification.rs  terminating.rs
daur-lib/src/project/: action.rs  bar.rs  changing.rs  edit.rs  history.rs  manager.rs  mod.rs  renderer.rs  ruler.rs  serial.rs  settings.rs  source.rs  workspace.rs
daur-lib/src/project/track/: action.rs  id.rs  mod.rs  overview.rs  settings.rs
daur-lib/src/ratio/: mod.rs  non_zero.rs  ops.rs  util.rs
daur-lib/src/real_time/: mod.rs  period.rs  tempo.rs
daur-lib/src/real_time/duration/: non_zero.rs
daur-lib/src/real_time/instant/: mod.rs  non_zero.rs
daur-lib/src/sync/: arc_cell.rs  cell.rs
daur-lib/src/time/: bar.rs  mapping.rs  mod.rs  period.rs  signature.rs  tempo.rs
daur-lib/src/time/duration/: mod.rs  non_zero.rs  ops.rs
daur-lib/src/time/instant/: mod.rs  non_zero.rs  ops.rs
daur-lib/src/time/period/: mod.rs  non_zero.rs
daur-lib/src/track/: mod.rs  overview.rs  render_stream.rs  settings.rs  source.rs
daur-lib/src/track/clip/: content.rs  overview.rs
daur-lib/src/track/overview/: cursor.rs  mod.rs
daur-lib/src/ui/: colour.rs  direction.rs  grid.rs  mapping.rs  mod.rs  offset.rs  point.rs  rectangle.rs  settings.rs  size.rs  theme.rs  vector.rs
daur-lib/src/view/: axis.rs  bordered.rs  builder.rs  canvas.rs  clicker.rs  composition.rs  constructors.rs  context.rs  cursor.rs  cursor_window.rs  direction.rs  feed.rs  file_selector.rs  grabber.rs  has_size.rs  homogenous.rs  hoverable.rs  macros.rs  minimum_size.rs  mod.rs  multi.rs  quotum.rs  reference.rs  render_area.rs  ruler.rs  selectable_item.rs  single.rs  size_informed.rs  solid.rs  text.rs  visit.rs
daur-lib/src/widget/: alignment.rs  bordered.rs  button.rs  cursor.rs  direction.rs  feed.rs  has_size.rs  heterogeneous.rs  homogenous.rs  hoverable.rs  injective.rs  macros.rs  mod.rs  multi.rs  reference.rs  ruler.rs  single.rs  size_informed.rs  solid.rs  text.rs  to_widget.rs
daur-tui/: Cargo.toml
daur-tui/src/: audio.rs  canvas.rs  condition.rs  configuration.rs  controls.rs  convert.rs  draw.rs  event.rs  key.rs  main.rs  popup_handle.rs  tui.rs
lib/: Cargo.toml
lib/src/: id.rs  lib.rs  piano_roll.rs  select.rs  string.rs
lib/src/app/: action.rs  actions.rs  mod.rs  view.rs
lib/src/audio/: config.rs  fixed_length.rs  import.rs  interleaved_samples.rs  mod.rs  player.rs  resample.rs  source.rs  subsection.rs
lib/src/extension/: mod.rs  option.rs
lib/src/holdable/: mod.rs  window_size.rs
lib/src/metre/: changing.rs  measure.rs  offset_mapping.rs  quantisation.rs  time_context.rs  time_signature.rs
lib/src/node/: mod.rs  process_result.rs
lib/src/note/: chroma.rs  group.rs  id.rs  interval.rs  key.rs  mod.rs  non_unison_simple_interval.rs  pitch.rs  pitch_class.rs  serial.rs  sign.rs
lib/src/popup/: manager.rs  mod.rs  specification.rs
lib/src/project/: bar.rs  edit.rs  history.rs  manager.rs  mod.rs  renderer.rs  serial.rs  workspace.rs
lib/src/ratio/: mod.rs  non_zero.rs  ops.rs  serde.rs  serial.rs  util.rs
lib/src/sync/: arc_cell.rs  cell.rs  mod.rs
lib/src/time/: period.rs  tempo.rs
lib/src/ui/: colour.rs  direction.rs  mod.rs  rectangle.rs  settings.rs  size.rs  theme.rs
lib/src/view/: alignment.rs  axis.rs  builder.rs  canvas.rs  constructors.rs  context.rs  cursor_window.rs  file.rs  file_selector.rs  minimum_size.rs  mod.rs  multi.rs  render_area.rs  ruler.rs  single.rs  text.rs
src/: id.rs  (+16 more)
(+200 files in other folders)
