[workspace]
resolver = "2"
members = ["daur-lib", "daur-tui"]

[workspace.package]
authors = ["SLUCHABLUB"]
edition = "2024"
repository = "https://github.com/SLUCHABLUB/daur"
license = "Apache-2.0"

# TODO: remove when cpal fork gets merged
[patch.crates-io]
cpal = { git = "https://github.com/SLUCHABLUB/cpal.git" }

[workspace.lints.rust]
unstable_name_collisions = "allow" # if the code breaks, it is an easy fix

absolute_paths_not_starting_with_crate = "deny"
ambiguous_negative_literals = "deny"
closure_returning_async_block = "deny"
let_underscore_drop = "deny"
meta_variable_misuse = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
missing_unsafe_on_extern = "deny"
non_ascii_idents = "deny"
# TODO: add when it gets stabilised
# non_exhaustive_omitted_patterns = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
# TODO: add when it gets stabilised
# supertrait_item_shadowing_definition = "deny"
# TODO: add when it gets stabilised
# supertrait_item_shadowing_usage = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unnameable_types = "deny"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_crate_dependencies = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
# restriction lints <= 1.87
absolute_paths = "deny"
alloc_instead_of_core = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arbitrary_source_item_ordering = "allow" # does not genrally aid readability imo
arithmetic_side_effects = "deny"
as_conversions = "allow" # more specififc lints are recomended
as_pointer_underscore = "deny"
as_underscore = "deny"
assertions_on_result_states = "deny"
big_endian_bytes = "deny"
cfg_not_test = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
dbg_macro = "deny"
decimal_literal_representation = "deny"
default_numeric_fallback = "allow" # has false positives
default_union_representation = "deny"
deref_by_slicing = "deny"
disallowed_script_idents = "deny"
doc_include_without_cfg = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "allow" # qualified syntax is fine imo
exhaustive_enums = "allow" # exhaustivity is good
exhaustive_structs = "allow" # exhaustivity is good
exit = "deny"
expect_used = "deny"
field_scoped_visibility_modifiers = "deny"
filetype_is_file = "deny"
float_arithmetic = "allow" # we are not embedded
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
host_endian_bytes = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
implicit_return = "allow" # aids readability imo
indexing_slicing = "deny"
infinite_loop = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax  = "deny"
integer_division = "deny"
integer_division_remainder_used = "allow" # timing sidechannel vulnerabilities is of no concern
iter_over_hash_type = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
little_endian_bytes = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
mem_forget = "deny"
min_ident_chars = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
missing_docs_in_private_items = "allow" # for now
missing_inline_in_public_items = "allow" # the performance increase is probably not worth the clutter
missing_trait_methods = "allow" # not intended for global use
mixed_read_write_in_expression = "deny"
mod_module_files = "allow" # this groups files more meaningfully imo
module_name_repetitions = "deny"
modulo_arithmetic = "allow" # we do not do language interop
multiple_inherent_impl = "allow" # allows splitting impls across files
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_raw_strings = "deny"
non_ascii_literal = "deny"
non_zero_suggestions = "deny"
panic = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "allow" # this allows for dereferencing
precedence_bits = "deny"
print_stderr = "deny"
print_stdout = "deny"
pub_use = "allow" # reexports allow for smaller files
pub_with_shorthand = "allow" # the shortahnds are good imo
pub_without_shorthand = "deny"
question_mark_used = "allow" # not intended for global use
rc_buffer = "deny"
rc_mutex = "deny"
# TODO: add in 1.88
# redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
semicolon_inside_block = "deny"
semicolon_outside_block = "allow" # semicolons look better on the insides of blocks imo
separated_literal_suffix = "allow" # separations aids redability
shadow_reuse = "allow" # I do not find it problematic
shadow_same = "allow" # I do not find it problematic
shadow_unrelated = "allow" # I do not find it problematic
single_call_fn = "allow" # splitting functions aids readbility
single_char_lifetime_names = "deny"
# TODO: std_instead_of_alloc = "deny"
# TODO: std_instead_of_core = "deny"
str_to_string = "deny"
string_add = "allow" # I do not suffer from commutativity normativity
string_lit_chars_any = "deny"
string_slice = "deny"
string_to_string = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unreachable = "deny"
unseparated_literal_suffix = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"
