[workspace]
resolver = "2"
members = ["daur-lib", "daur-tui"]

[workspace.package]
authors = ["SLUCHABLUB"]
edition = "2024"
repository = "https://github.com/SLUCHABLUB/daur"
license = "GPL-3"

# TODO: remove when 15.4 is released
[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal.git" }

[workspace.lints.rust]
unstable_name_collisions = "allow" # if the code breaks, it is an easy fix

absolute_paths_not_starting_with_crate = "deny"
ambiguous_negative_literals = "deny"
closure_returning_async_block = "deny"
let_underscore_drop = "deny"
meta_variable_misuse = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
missing_unsafe_on_extern = "deny"
non_ascii_idents = "deny"
# TODO: add when it gets stabilised
# non_exhaustive_omitted_patterns = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
# TODO: add when it gets stabilised
# supertrait_item_shadowing_definition = "deny"
# TODO: add when it gets stabilised
# supertrait_item_shadowing_usage = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unnameable_types = "deny"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_crate_dependencies = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

blanket_clippy_restriction_lints = "allow" # we deny more restriction lints than we allow
restriction = { level = "deny", priority = -1 }

arbitrary_source_item_ordering = "allow" # does not genrally aid readability imo
as_conversions = "allow" # more specififc lints are recomended
default_numeric_fallback = "allow" # has false positives
error_impl_error = "allow" # qualified syntax is fine imo
exhaustive_enums = "allow" # exhaustivity is good
exhaustive_structs = "allow" # exhaustivity is good
float_arithmetic = "allow" # we are not embedded
implicit_return = "allow" # aids readability imo
integer_division_remainder_used = "allow" # timing sidechannel vulnerabilities is of no concern
missing_docs_in_private_items = "allow" # for now
missing_inline_in_public_items = "allow" # the performance increase is probably not worth the clutter
missing_trait_methods = "allow" # not intended for global use
mod_module_files = "allow" # this groups files more meaningfully imo
modulo_arithmetic = "allow" # we do not do language interop
multiple_inherent_impl = "allow" # allows splitting impls across files
pattern_type_mismatch = "allow" # this allows for dereferencing
pub_use = "allow" # reexports allow for smaller files
pub_with_shorthand = "allow" # the shortahnds are good imo
question_mark_used = "allow" # not intended for global use
semicolon_outside_block = "allow" # semicolons look better on the insides of blocks imo
separated_literal_suffix = "allow" # separations aids redability
shadow_reuse = "allow" # I do not find it problematic
shadow_same = "allow" # I do not find it problematic
shadow_unrelated = "allow" # I do not find it problematic
single_call_fn = "allow" # splitting functions aids readbility
string_add = "allow" # I do not suffer from commutativity normativity
