[workspace]
resolver = "2"
members = ["lib", "tui"]

[workspace.package]
authors = ["SLUCHABLUB"]
edition = "2024"
repository = "https://github.com/SLUCHABLUB/daur"
license = "GPL-3"

[workspace.lints.rust]
unstable_name_collisions = "allow" # if the code breaks, it is an easy fix

absolute_paths_not_starting_with_crate = "deny"
ambiguous_negative_literals = "deny"
closure_returning_async_block = "deny"
let_underscore_drop = "deny"
meta_variable_misuse = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
missing_unsafe_on_extern = "deny"
non_ascii_idents = "deny"
# TODO: add when it gets stabilised
# non_exhaustive_omitted_patterns = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
# TODO: add when it gets stabilised
# supertrait_item_shadowing_definition = "deny"
# TODO: add when it gets stabilised
# supertrait_item_shadowing_usage = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unnameable_types = "deny"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_crate_dependencies = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# We deny more restriction lints than we allow.
blanket_clippy_restriction_lints = "allow"
restriction = { level = "deny", priority = -1 }

# These restrictions worsen readability IMO.
arbitrary_source_item_ordering = "allow"
error_impl_error = "allow" # Qualified syntax is fine IMO.
implicit_return = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
pattern_type_mismatch = "allow"
pub_use = "allow" # Reexports allow for smaller files.

# Allowing exhaustive matching is good in most cases IMO.
exhaustive_enums = "allow"
exhaustive_structs = "allow"

# These are mutually exclusive with other lints
mod_module_files = "allow"
semicolon_outside_block = "allow" # This naming is weird, but semicolons go inside blocks.
separated_literal_suffix = "allow"
pub_with_shorthand = "allow"

# These are not relevant for our domain.
float_arithmetic = "allow"
integer_division_remainder_used = "allow"

# We need `std`, so this decreases clutter in my opinion.
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"

# These are not intended for global use.
missing_trait_methods = "allow"
question_mark_used = "allow"

# Lints with sub-lints that are better.
as_conversions = "allow"

# Lints with many false positives.
default_numeric_fallback = "allow"
unsafe_derive_deserialize = "allow"

# TODO: Maybe deny these later.
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
multiple_inherent_impl = "allow"
