[package]
name = "daur"
version = "0.1.0"
authors = ["SLUCHABLUB"]
edition = "2024"

[dependencies]
arcstr = "1.2.0"
bitbag = "0.3.0"
const-str = "0.6.1"
crossbeam = "0.8.4"
derive_more = { version = "2.0.1", features = ["debug", "from", "full"] }
dirs = "6.0.0"
# TODO: use the official verion when clone-getters get added
getset = { git = "https://github.com/SLUCHABLUB/getset.git" }
hound = "3.5.1"
itertools = "0.14.0"
num = "0.4.3"
parking_lot = "0.12.3"
saturating_cast = "0.1.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.11"

# TODO: remove so that different UIs can use their own audio (but maybe provide a feature for an implementation)
rodio = "0.20.1"
