[package]
name = "daur"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arcstr = "1.2.0"
bitbag = "0.3.0"
const-str = "0.6.1"
closure = { git = "https://github.com/SLUCHABLUB/closure.git" }
crossbeam = "0.8.4"
derive_more = { version = "2.0.1", features = ["debug", "from", "full"] }
dirs = "6.0.0"
# TODO: use the official version when clone-getters get added
getset = { git = "https://github.com/SLUCHABLUB/getset.git" }
hound = "3.5.1"
itertools = "0.14.0"
num = "0.4.3"
parking_lot = "0.12.3"
saturating_cast = "0.1.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.11"
rodio = "0.20.1"
executors = "0.10.0"
rubato = "0.16.2"
anyhow = "1.0.98"
non-zero = "0.1.0"
mitsein = { version = "0.6.1", features = ["indexmap"] }
