[package]
name = "daur-tui"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ascii = "1.1.0"
crossterm = { version = "0.29.0", features = ["serde"] }
daur = { path = "../daur-lib" }
non-zero = "0.1.0"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
saturating_cast = "0.1.0"
unicode-width = "0.2"
